--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
     </div>
 
     <!-- scripts -->
-    <script src="./vendors/jquery/dist/jquery.min.js"></script>
+    <script src="./vendors/jquery/jquery.min.js"></script>
     <script src="./vendors/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./vendors/animate-on-scroll/aos.js"></script>
-    <script src="./vendors/jquery-validate/dist/jquery.validate.min.js"></script>
-    <script src="./vendors/slick/slick.min.js"></script>
+    <script src="./vendors/css-vars-ponyfill/css-vars-ponyfill-2.min.js"></script>
     <script src="./vendors/object-fit/ofi.min.js"></script>
     <script src="./js/app.min.js"></script>
 </body>
