--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
 
     <div class="container">
         <h1>This is not a psd2html Template!</h1>
+
+        <div class="d-flex">
+            <i class="fab fa-instagram-square"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fas fa-phone"></i>
+            <i class="fas fa-envelope"></i>
+            <i class="fas fa-globe"></i>
+        </div>
     </div>
 
     <!-- scrolltop button -->
