--- a/index.html
+++ b/index.html
@@ -49,10 +49,6 @@
     </div>
     <!-- // end header -->
 
-    <div class="container">
-        <h1>This is not a psd2html Template!</h1>
-    </div>
-
     <!-- scrolltop button -->
     <div class="scroll-top-btn btn">
         <i class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -60,9 +56,11 @@
 
     <!-- scripts -->
     <script src="./vendors/jquery/jquery.min.js"></script>
-    <script src="./vendors/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="./vendors/css-vars-ponyfill/css-vars-ponyfill-2.min.js"></script>
     <script src="./vendors/object-fit/ofi.min.js"></script>
+    <script src="./vendors/animate-on-scroll/aos.js"></script>
+    <script src="./vendors/slick/slick.bundle.min.js"></script>
     <script src="./js/app.min.js"></script>
 </body>
 
