--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="./vendors/slick/slick.css">
     <!-- app css -->
-    <link rel="stylesheet" href="./css/app.min.css" />
+    <link rel="stylesheet" href="./css/app.css" />
 </head>
 
 <body>
@@ -61,7 +61,7 @@
     <script src="./vendors/object-fit/ofi.min.js"></script>
     <script src="./vendors/animate-on-scroll/aos.js"></script>
     <script src="./vendors/slick/slick.bundle.min.js"></script>
-    <script src="./js/app.min.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
