--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="./vendors/slick/slick.css">
     <!-- app css -->
-    <link rel="stylesheet" href="./css/app.min.css" />
+    <link rel="stylesheet" href="./css/app.css" />
 </head>
 
 <body>
