--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
     <!-- scripts -->
     <script src="./vendors/jquery/jquery.min.js"></script>
     <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="./vendors/css-vars-ponyfill/css-vars-ponyfill-2.min.js"></script>
-    <script src="./vendors/object-fit/ofi.min.js"></script>
-    <script src="./vendors/animate-on-scroll/aos.js"></script>
-    <script src="./vendors/slick/slick.bundle.min.js"></script>
-    <script src="./js/app.min.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
