--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="navbar-wrapper">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="./"><img src="./img/logo.png" alt=""></a>
+                <a class="navbar-brand" href="./"><img src="./img/logo.svg" alt=""></a>
 
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fal fa-bars"></i></span>
