--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- vendor css -->
     <link rel="stylesheet" href="./vendors/bootstrap-5.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./vendors/animate-on-scroll/aos.css">
-    <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
+    <link rel="stylesheet" href="./vendors/fontawesome-6/css/">
     <!-- app css -->
     <link rel="stylesheet" href="./css/app.css" />
 </head>
@@ -47,6 +47,8 @@
         </nav>
     </div>
     <!-- // end header -->
+
+    <button class="btn btn-primary">Primary</button>
 
     <!-- scripts -->
     <script src="./vendors/jquery/jquery.min.js"></script>
