--- a/index.html
+++ b/index.html
@@ -9,50 +9,114 @@
     <!-- google fonts -->
 
     <!-- vendor css -->
-    <link rel="stylesheet" href="./vendors/bootstrap-5.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./vendors/animate-on-scroll/aos.css">
-    <link rel="stylesheet" href="./vendors/fontawesome-6/css/">
+    <link rel="stylesheet" href="./vendors/bootstrap.imp-5.3.3/css/bootstrap.imp.min.css">
+    <link rel="stylesheet" href="./vendors/fontawesome-6/css/all.min.css">
     <!-- app css -->
     <link rel="stylesheet" href="./css/app.css" />
 </head>
 
 <body>
     <!-- header -->
-    <div class="navbar-wrapper">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="./"><img src="./img/logo.svg" alt=""></a>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="./"><img src="./img/logo.svg" height="25" alt="Brand"></a>
 
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"><i class="fal fa-bars"></i></span>
-                </button>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><i class="fal fa-bars"></i></span>
+            </button>
 
-                <div class="collapse navbar-collapse" id="main-navbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="./">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="collapse navbar-collapse" id="main-navbar">
+                <ul class="navbar-nav ms-lg-auto me-lg-3">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-primary" type="submit">Search</button>
+                </form>
+
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
     <!-- // end header -->
 
-    <button class="btn btn-primary">Primary</button>
+    <div class="container py-6">
+        <div class="row">
+            <div class="col-lg-6">
+                <form>
+                    <h4 class="text-primary">Form</h4>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+
+                    <div class="mb-3 form-check">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label" for="flexRadioDefault1">
+                            Default radio
+                        </label>
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                        <label class="form-check-label" for="flexRadioDefault2">
+                            Default checked radio
+                        </label>
+                    </div>
+
+                    <div class="alert alert-primary" role="alert">
+                        A simple primary alert—check it out!
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button class="btn btn-secondary">Cancel</button>
+                </form>
+
+
+
+            </div>
+
+            <div class="col-lg-6 ps-lg-100px">
+                <div class="bg-primary py-5 mb-3 h-100"></div>
+            </div>
+        </div>
+    </div>
 
     <!-- scripts -->
     <script src="./vendors/jquery/jquery.min.js"></script>
-    <script src="./vendors/bootstrap-5.3.2/js/bootstrap.min.js"></script>
+    <script src="./vendors/bootstrap.imp-5.3.3/js/bootstrap.bundle.imp.min.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
