--- a/index.html
+++ b/index.html
@@ -64,55 +64,59 @@
     </nav>
     <!-- // end header -->
 
-    <div class="container py-6">
-        <div class="row">
-            <div class="col-lg-6">
-                <form>
-                    <h4 class="text-primary">Form</h4>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
+    <!-- content-section-row -->
+    <section class="py-6 content-section-row">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <form>
+                        <h4 class="text-primary">Form</h4>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
 
-                    <div class="mb-3 form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                        <label class="form-check-label" for="flexRadioDefault1">
-                            Default radio
-                        </label>
-                    </div>
-                    <div class="mb-3 form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                        <label class="form-check-label" for="flexRadioDefault2">
-                            Default checked radio
-                        </label>
-                    </div>
+                        <div class="mb-3 form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                                Default radio
+                            </label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                            <label class="form-check-label" for="flexRadioDefault2">
+                                Default checked radio
+                            </label>
+                        </div>
 
-                    <div class="alert alert-primary" role="alert">
-                        A simple primary alert—check it out!
-                    </div>
+                        <div class="alert alert-primary" role="alert">
+                            A simple primary alert—check it out!
+                        </div>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <button class="btn btn-secondary">Cancel</button>
-                </form>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button class="btn btn-secondary">Cancel</button>
+                    </form>
 
 
 
-            </div>
+                </div>
 
-            <div class="col-lg-6 ps-lg-100px">
-                <div class="bg-primary py-5 mb-3 h-100"></div>
+                <div class="col-lg-6 ps-lg-100px">
+                    <div class="bg-primary py-5 mb-3 h-100"></div>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    <!-- //end content-section-row -->
 
     <!-- scripts -->
     <script src="./vendors/jquery/jquery.min.js"></script>
