Fix swipe component yt issue
issue on single item slider

--- a/swiper.html
+++ b/swiper.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/vendors/bootstrap.imp-5.3.3/css/bootstrap.imp.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
-        .swiper-container {
+        .swiper-component {
             position: relative;
-            height: 500px;
-            width: 800px;
+            height: 800px;
+            width: 100%;
             margin-left: auto;
             margin-right: auto;
             overflow: hidden;
@@ -35,7 +35,7 @@
 
 <body>
     <!-- Swiper Container -->
-    <div class="swiper-container">
+    <div class="swiper swiper-component">
         <div class="swiper-wrapper">
             <!-- YouTube Video Slide -->
             <div class="swiper-slide" data-video-type="youtube">
